Ya se puede seleccionar el centro de donación y el grupo sanguineo. Si no estan seleccionados no deja continuar. Guarda en preferencias ambos valores. En función de si están fijados estos parametros en preferenicias direcciona a una pantalla  u otra (menu principal o primer inicio). Actualiza el subtitulo del menú principal con la descripción del centro seleccionado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="home_agenda_descripcion">Anota tus donaciones y olvídate de fechas</string>
     <string name="title_activity_primer_inicio">Configuracion inicial</string>
     <string name="title_activity_splash_screen">Donantes</string>
+    <color name="rojo">#c00</color>
 </resources>
