Empezada la pantalla de configuracion, añadidas las pantallas (en blanco) de informacion y mensajes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="title_activity_primer_inicio">Configuracion inicial</string>
     <string name="title_activity_splash_screen">Donantes</string>
     <color name="rojo">#c00</color>
+    <string name="title_activity_configuracion">Configuracion</string>
+    <string name="title_activity_informacion">Informacion</string>
+    <string name="title_activity_mensajes">Mensajes</string>
 </resources>
