--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="title_activity_configuracion">Configuracion</string>
     <string name="title_activity_informacion">Informacion</string>
     <string name="title_activity_mensajes">Mensajes</string>
+
+    <string name="informacion_donante_title">Información al donante</string>
 </resources>
