Agenda funcionando. Librería de calendario cambiada. Iconos de grupo sanguineo subidos. Actividad de punto de donación subida.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="title_activity_configuracion">Configuracion</string>
     <string name="title_activity_informacion">Informacion</string>
     <string name="title_activity_mensajes">Mensajes</string>
+    <string name="title_activity_punto_de_donacion">PuntoDeDonacion</string>
 
     <string name="informacion_donante_title">Información al donante</string>
 </resources>
