--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_punto_de_donacion">PuntoDeDonacion</string>
 
     <string name="informacion_donante_title">Información al donante</string>
+    <string name="hint_num_donante">Número de donante</string>
 </resources>
