--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="error_retrieving_puntosdonacion">Error recuperando puntos de donación</string>
     <string name="error_saving_centro_regional">Error almacenando centro de donación</string>
     <string name="error_saving_puntos_donacion">Error almacenando puntos de donación</string>
+    <string name="empty_query_puntosdonacion">No se obtuvieron puntos de donación para dicho centro regional</string>
 </resources>
